--- a/footer_content.html
+++ b/footer_content.html
@@ -6,22 +6,7 @@
         <div class="row">
             <div class="col-6 col-12-medium">
                 <section>
-                    <form method="post" action="#">
-                        <div class="row gtr-50">
-                            <div class="col-6 col-12-small">
-                                <input name="name" placeholder="Nombre" type="text" />
-                            </div>
-                            <div class="col-6 col-12-small">
-                                <input name="email" placeholder="Email" type="text" />
-                            </div>
-                            <div class="col-12">
-                                <textarea name="message" placeholder="Mensaje"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <a href="#" class="form-button-submit button icon solid fa-envelope">Enviar</a>
-                            </div>
-                        </div>
-                    </form>
+                    <img class="responsive" src="images/footer.png"/>
                 </section>
             </div>
             <div class="col-6 col-12-medium">
