add ajax and fix session required

--- a/footer_content.html
+++ b/footer_content.html
@@ -29,7 +29,7 @@
                                     316 396-5498
                                 </li>
                                 <li class="icon solid fa-envelope">
-                                    <a href="mailto:info@parejaspasto.ml">info@parejaspasto.ml</a>
+                                    <a href="mailto:info@parejaspasto.com.co">info@parejaspasto.com.co</a>
                                 </li>
                             </ul>
                         </div>
